Configuration backend : environnement multi-config et dépendances

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -1,6 +1,25 @@
-FLASK_APP=app.py
+# Flask Environment Configuration
 FLASK_ENV=development
-SECRET_KEY=dev-secret-key-change-in-production
-JWT_SECRET_KEY=dev-jwt-secret-change-in-production
-DATABASE_URL=sqlite:///naya.db
+FLASK_DEBUG=true
+FLASK_HOST=127.0.0.1
+FLASK_PORT=5000
+
+# Security Keys
+SECRET_KEY=naya-travel-journal-secret-key-dev
+JWT_SECRET_KEY=naya-jwt-secret-key-dev
+
+# Database Configuration
+DATABASE_URL=sqlite:///naya_travel_journal.db
+DEV_DATABASE_URL=sqlite:///naya_dev.db
+
+# External APIs
 GOOGLE_MAPS_API_KEY=your-google-maps-api-key-here
+
+# File Upload Configuration
+UPLOAD_FOLDER=uploads
+
+# CORS Configuration (for frontend)
+CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
+
+# Redis Configuration (for rate limiting - optional)
+REDIS_URL=memory://
