--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -2,11 +2,12 @@ Flask==2.3.3
 Flask-SQLAlchemy==3.0.5
 Flask-JWT-Extended==4.5.3
 Flask-CORS==4.0.0
-Werkzeug==2.3.7
 SQLAlchemy==2.0.21
+Werkzeug==2.3.7
 PyJWT==2.8.0
-requests==2.31.0
 python-dotenv==1.0.0
+python-multipart==0.0.6
+requests==2.31.0
 pytest==7.4.2
 pytest-cov==4.1.0
-python-multipart==0.0.6
+Flask-Migrate==4.0.5
