Ajout fichier configuration en français
- Instructions pour Yassine
- Variables de config traduites
- Guide utilisation clés API

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -1,25 +1,37 @@
-# Flask Environment Configuration
+# =============================================================================
+# CONFIGURATION NAYA TRAVEL JOURNAL 
+# =============================================================================
+# 
+# INSTRUCTIONS POUR YASSINE :
+# 1. Copie ce fichier : cp .env.example .env
+# 2. Modifie les valeurs dans ton nouveau fichier .env
+# 3. NE PUSH JAMAIS ton fichier .env (il contient tes clés secrètes)
+# 
+# =============================================================================
+
+# Configuration Flask (Backend)
 FLASK_ENV=development
 FLASK_DEBUG=true
 FLASK_HOST=127.0.0.1
 FLASK_PORT=5000
 
-# Security Keys
-SECRET_KEY=naya-travel-journal-secret-key-dev
-JWT_SECRET_KEY=naya-jwt-secret-key-dev
+# Clés de sécurité (CHANGE CES VALEURS dans ton .env)
+SECRET_KEY=naya-secret-key-a-changer
+JWT_SECRET_KEY=naya-jwt-key-a-changer
 
-# Database Configuration
+# Base de données
 DATABASE_URL=sqlite:///naya_travel_journal.db
 DEV_DATABASE_URL=sqlite:///naya_dev.db
 
-# External APIs
-GOOGLE_MAPS_API_KEY=your-google-maps-api-key-here
+# API Google Maps (pour afficher les lieux)
+# Va sur https://console.cloud.google.com pour obtenir ta clé
+GOOGLE_MAPS_API_KEY=ta-cle-google-maps-ici
 
-# File Upload Configuration
+# Dossier pour les photos uploadées
 UPLOAD_FOLDER=uploads
 
-# CORS Configuration (for frontend)
+# CORS pour le frontend (adapte selon ton port frontend)
 CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
 
-# Redis Configuration (for rate limiting - optional)
+# Redis (optionnel - pour limitation de requêtes)
 REDIS_URL=memory://
