Add integration tests for API endpoints and enhance frontend functionality
- Introduced shared pytest fixtures in `conftest.py` for API-level tests.
- Added tests for token refresh functionality in `test_auth.py`.
- Created integration tests for places endpoints in `test_places.py`.
- Developed comprehensive integration tests for reviews API in `test_reviews.py`.
- Enhanced frontend with a search feature for reviews on the map, including UI updates in `app.js` and `index.html`.
- Improved styling for review editing and photo management in `styles.css`.

--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,12 @@
 # Don't track environment files
 Backend/.env
 Backend/naya.db
+Backend/instance/*.db
 
 # Don't track uploads directory contents
 Backend/uploads/*
 !Backend/uploads/.gitkeep
+Backend/app/uploads/
 
 # Don't track Python cache
 Backend/__pycache__/
