--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -1,37 +1,29 @@
-# =============================================================================
-# CONFIGURATION NAYA TRAVEL JOURNAL 
-# =============================================================================
-# 
-# INSTRUCTIONS POUR YASSINE :
-# 1. Copie ce fichier : cp .env.example .env
-# 2. Modifie les valeurs dans ton nouveau fichier .env
-# 3. NE PUSH JAMAIS ton fichier .env (il contient tes clés secrètes)
-# 
-# =============================================================================
+### Application secrets
+SECRET_KEY=dev-secret-key-change-me
+JWT_SECRET_KEY=dev-jwt-secret-change-me
 
-# Configuration Flask (Backend)
-FLASK_ENV=development
-FLASK_DEBUG=true
-FLASK_HOST=127.0.0.1
-FLASK_PORT=5000
+### Admin provisioning (optional)
+ADMIN_EMAILS=admin@example.com
+ADMIN_DEFAULT_EMAIL=admin@example.com
+ADMIN_DEFAULT_PASSWORD=SuperSecurePassword123
 
-# Clés de sécurité (CHANGE CES VALEURS dans ton .env)
-SECRET_KEY=naya-secret-key-a-changer
-JWT_SECRET_KEY=naya-jwt-key-a-changer
+### Database connections
+# Production / default database
+DATABASE_URL=postgresql://naya_user:change_me@db_host:5432/naya_prod
+# Development override (used when FLASK_ENV=development)
+DEV_DATABASE_URL=postgresql://naya_dev:change_me@db_host:5432/naya_dev
 
-# Base de données
-DATABASE_URL=sqlite:///naya_travel_journal.db
-DEV_DATABASE_URL=sqlite:///naya_dev.db
+### External services
+REDIS_URL=redis://redis_host:6379/0
+GOOGLE_MAPS_API_KEY=your-google-maps-api-key
 
-# API Google Maps (pour afficher les lieux)
-# Va sur https://console.cloud.google.com pour obtenir ta clé
-GOOGLE_MAPS_API_KEY=ta-cle-google-maps-ici
+### CORS / Frontend origins (comma-separated)
+CORS_ORIGINS=https://naya.example.com,https://admin.naya.example.com
 
-# Dossier pour les photos uploadées
-UPLOAD_FOLDER=uploads
+### File uploads (mounted volume inside container)
+UPLOAD_FOLDER=/data/uploads
 
-# CORS pour le frontend (adapte selon ton port frontend)
-CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
-
-# Redis (optionnel - pour limitation de requêtes)
-REDIS_URL=memory://
+### Runtime overrides (optional)
+FLASK_HOST=0.0.0.0
+FLASK_PORT=8000
+FLASK_DEBUG=False
